sửa chính tả và thêm nội dung mô tả

--- a/index.html
+++ b/index.html
@@ -205,10 +205,12 @@
 
         <section class="about-text">
           <p>
-            Tôi tên là Trọng Anh nhưng mọi người hay gọi tôi là Đạt, một nhân viên thiết kế đồ họa với niềm đam mê việc cải thiện trải nghiệm người dùng
-            thông qua những giao diện trực quan và sáng tạo.
-            Với kinh nghiệm làm việc trong nhiều dự án thiết kế banner, hình ảnh sản phẩm và tham gia
-            thi công trực tiếp cho cho người sử dụng.
+            Xin chào!
+            Tôi là Trọng Anh, nhưng mọi người thường gọi tôi là Đạt.
+            Tôi là một nhà thiết kế đồ họa chuyên tạo ra những giao diện trực quan và sáng tạo, hướng tới việc đáp ứng nhu cầu đa dạng của khách hàng.
+            Tôi đã có kinh nghiệm tham gia nhiều dự án thiết kế như banner quảng cáo, hình ảnh sản phẩm và đảm nhận triển khai trực tiếp cho
+            người dùng cuối. Từng dự án tôi thực hiện đều chú trọng vào việc kết hợp tính thẩm mỹ và khả năng ứng dụng thực tiễn,
+            mang lại giá trị tối ưu cho khách hàng và người dùng.
 
           </p>
 
@@ -1179,7 +1181,7 @@
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/blog-tgss-2.jpg" alt="The forgotten art of spacing" loading="lazy">
+                  <img src="./assets/images/blog-tgss-2.JPG" alt="The forgotten art of spacing" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
