--- a/index.html
+++ b/index.html
@@ -206,8 +206,10 @@
         <section class="about-text">
           <p>
             Xin chào!
+          </p>
+          <p>
             Tôi là Trọng Anh, nhưng mọi người thường gọi tôi là Đạt.
-            Tôi là một nhà thiết kế đồ họa chuyên tạo ra những giao diện trực quan và sáng tạo, hướng tới việc đáp ứng nhu cầu đa dạng của khách hàng.
+            Tôi là một thiết kế viên chuyên tạo ra những giao diện trực quan và sáng tạo, hướng tới việc đáp ứng nhu cầu đa dạng của khách hàng.
             Tôi đã có kinh nghiệm tham gia nhiều dự án thiết kế như banner quảng cáo, hình ảnh sản phẩm và đảm nhận triển khai trực tiếp cho
             người dùng cuối. Từng dự án tôi thực hiện đều chú trọng vào việc kết hợp tính thẩm mỹ và khả năng ứng dụng thực tiễn,
             mang lại giá trị tối ưu cho khách hàng và người dùng.
@@ -241,7 +243,7 @@
                 <h4 class="h4 service-item-title">Nhận diện Thương hiệu</h4>
 
                 <p class="service-item-text">
-                  Tham gia thiết kế nhận diện thương hiệu cho Shop kinh doanh trên Sàn Thương Mại Điện tử
+                  Tham gia thiết kế nhận diện thương hiệu cho Shop kinh doanh trên Sàn Thương Mại Điện tử: ANH Turbo
                 </p>
               </div>
 
@@ -257,7 +259,7 @@
                 <h4 class="h4 service-item-title">Quản Trị Website và Fanpage</h4>
 
                 <p class="service-item-text">
-                  Triển khai thực hiện các nội dung trên Fanpage và bảo đảm vân hành website thông suốt
+                  Triển khai thực hiện các nội dung trên Fanpage và bảo đảm vận hành website thông suốt của: Hệ thống cửa hàng Thế Giới Sơ Sinh và HANET Electronics Vietnam
                 </p>
               </div>
 
@@ -274,7 +276,7 @@
 
                 <p class="service-item-text">
                   Hỗ trợ vận hành các hoạt động kinh doanh trên các sàn TMĐT:
-                   Shopee, Tiktok Shop
+                   Shopee, Tiktok Shop (Anh Turbo Shop, Thegioisosinh Shop)
                 </p>
               </div>
 
@@ -290,7 +292,7 @@
                 <h4 class="h4 service-item-title">Photography</h4>
 
                 <p class="service-item-text">
-                  Chụp ảnh sản phẩm và tương tác nội dung trực tiếp với khách hàng
+                  Chụp ảnh sản phẩm và tương tác nội dung trực tiếp với khách hàng cho: icom Design, Trung Sơn Pharma
                 </p>
               </div>
 
@@ -351,7 +353,7 @@
             </li>
 
             <li class="clients-item">
-              <a href="#">
+              <a href="https://fanfit.vn/">
                 <img src="./assets/images/logo-6-color.png" alt="client logo">
               </a>
             </li>
