--- a/index.html
+++ b/index.html
@@ -323,31 +323,31 @@
           <ul class="clients-list has-scrollbar">
 
             <li class="clients-item">
-              <a href="#">
+              <a href="https://icomdesign.com.vn/dich-vu-thi-cong/">
                 <img src="./assets/images/logo-1-color.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="#">
+              <a href="https://thegioisosinh.vn/">
                 <img src="./assets/images/logo-2-color.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="#">
+              <a href="https://shopee.vn/cau2tomy">
                 <img src="./assets/images/logo-3-color.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="#">
+              <a href="https://trungsoncare.com/su-kien-khai-truong.html">
                 <img src="./assets/images/logo-4-color.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="#">
+              <a href="https://www.hanet.com/">
                 <img src="./assets/images/logo-5-color.png" alt="client logo">
               </a>
             </li>
