--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <h4 class="h4 service-item-title">Nhận diện Thương hiệu</h4>
 
                 <p class="service-item-text">
-                  Tham gia thiết kế nhận diện thương hiệu cho Shop kinh doanh trên Sàn Thương Mại Điện tử: ANH Turbo
+                  Tham gia thiết kế nhận diện thương hiệu cho Shop kinh doanh trên Sàn Thương Mại Điện tử: ANH Turbo, nhóm facebook Chia sẻ Dụng cụ chuyên nghiệp "Gu Took"
                 </p>
               </div>
 
@@ -323,37 +323,37 @@
           <ul class="clients-list has-scrollbar">
 
             <li class="clients-item">
-              <a href="https://icomdesign.com.vn/dich-vu-thi-cong/">
+              <a href="https://icomdesign.com.vn/dich-vu-thi-cong/" target="_blank">
                 <img src="./assets/images/logo-1-color.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="https://thegioisosinh.vn/">
+              <a href="https://thegioisosinh.vn/" target="_blank">
                 <img src="./assets/images/logo-2-color.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="https://shopee.vn/cau2tomy">
+              <a href="https://shopee.vn/cau2tomy" target="_blank">
                 <img src="./assets/images/logo-3-color.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="https://trungsoncare.com/su-kien-khai-truong.html">
+              <a href="https://trungsoncare.com/su-kien-khai-truong.html" target="_blank">
                 <img src="./assets/images/logo-4-color.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="https://www.hanet.com/">
+              <a href="https://www.hanet.com/" target="_blank">
                 <img src="./assets/images/logo-5-color.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="https://fanfit.vn/">
+              <a href="https://fanfit.vn/" target="_blank">
                 <img src="./assets/images/logo-6-color.png" alt="client logo">
               </a>
             </li>
