--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <h4 class="h4 service-item-title">Nhận diện Thương hiệu</h4>
 
                 <p class="service-item-text">
-                  Tham gia thiết kế nhận diện thương hiệu cho Shop kinh doanh trên Sàn Thương Mại Điện tử: ANH Turbo, nhóm facebook Chia sẻ Dụng cụ chuyên nghiệp "Gu Took"
+                  Tham gia thiết kế nhận diện thương hiệu cho Shop kinh doanh trên Sàn Thương Mại Điện tử: ANH Turbo, nhóm facebook Chia sẻ Dụng cụ chuyên nghiệp "Gu Tool"
                 </p>
               </div>
 
