--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Nguyễn Trọng Anh">Nguyễn Trọng Anh</h1>
 
-          <p class="title">Thiết Kê Viên</p>
+          <p class="title">Thiết Kế Viên</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
